--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,11 +46,16 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-api:$jupiter_version"
     testImplementation "org.junit.jupiter:junit-jupiter-params:$jupiter_version"
 
+    testImplementation 'androidx.test:runner:1.3.0'
+
     //for work with BD
+    //noinspection GradleDependency
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     // optional - Kotlin Extensions and Coroutines support for Room
+    //noinspection GradleDependency
     implementation "androidx.room:room-ktx:$room_version"
     // optional - Test helpers
+    //noinspection GradleDependency
     testImplementation "androidx.room:room-testing:$room_version"
 }
