--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,14 +23,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    testOptions {
+        unitTests.includeAndroidResources = true
+    }
 }
 
 dependencies {
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'com.google.android.support:wearable:2.8.1'
-    implementation 'com.google.android.gms:play-services-wearable:17.0.0'
+    implementation 'com.google.android.gms:play-services-wearable:17.1.0'
     implementation 'androidx.percentlayout:percentlayout:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
@@ -39,23 +42,19 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     compileOnly 'com.google.android.wearable:wearable:2.8.1'
 
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-
     //jupiter tests
     testImplementation "org.junit.jupiter:junit-jupiter-api:$jupiter_version"
     testImplementation "org.junit.jupiter:junit-jupiter-params:$jupiter_version"
+    testImplementation "io.mockk:mockk:1.4.1"
 
-    testImplementation 'androidx.test:runner:1.3.0'
+    //Test for DB, over time it is worth combining with Jupiter
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'androidx.test:core-ktx:1.3.0'
+    testImplementation 'androidx.test.ext:junit-ktx:1.1.2'
+    testImplementation 'org.robolectric:robolectric:4.5'
 
     //for work with BD
-    //noinspection GradleDependency
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-    // optional - Kotlin Extensions and Coroutines support for Room
-    //noinspection GradleDependency
     implementation "androidx.room:room-ktx:$room_version"
-    // optional - Test helpers
-    //noinspection GradleDependency
-    testImplementation "androidx.room:room-testing:$room_version"
 }
