--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".InputActivity"></activity>
-        <activity android:name=".MainActivity2" />
+        android:theme="@style/Theme.AppCompat.NoActionBar"
+        android:fullBackupContent="@xml/backup_descriptor">
 
         <uses-library
             android:name="com.google.android.wearable"
